optimize blank cell Excel export (tdf#133749)

The code in XclExpRow::Finalize() apparently creates an array
of indexes for blank cells, and then uses it
to efficiently write many blank cells (or whatever it's all exactly).
But especially with huge sheets all this processing is basically
repeatedly checking for all the blank cells at the end of the rows.

Optimize this by calculating where the all the remaining blank cells
start and process those more efficiently or sometimes even just
plain ignore them. Possibly this could be optimized even more if
I understood the code better, but this seems to be good enough.

I've also changed some of the loops to use indexing instead of
iterators, as libstdc++ debug iterators are horribly slow here
(which possibly may even make a difference for Jenkins builds).

Change-Id: Iafe36ccd2795a85b10b98cf84c041a7427aabc29